# ti-2500-datamath

./: .gitignore  CMakeLists.txt  Makefile  README.md
SinclairScientific5/: README.md
TICalculatorJSSimulator/: README.md
app/: Package.swift
app/Sources/Application/: MainApp.swift
app/Sources/Gui/: ContentView.swift  ModelProxy.swift
app/Sources/ModelCxx/: calculator.h  code.cpp  cpu.cpp  display.cpp  keys.cpp  trace.cpp
cpp/: Makefile  code.cpp  cpu.cpp  disasm.cpp  globals.h  keys.cpp  main.cpp
gtkmm/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
src/: CMakeLists.txt  Makefile  calculator.h  code.cpp  cpu.cpp  disasm.cpp  display.cpp  keys.cpp  main.cpp  trace.cpp
swiftui/: Package.swift
swiftui/Sources/Application/: MainApp.swift
swiftui/Sources/Gui/: ContentView.swift  ModelProxy.swift
swiftui/Sources/ModelCxx/: ModelCxx.cpp  ModelCxx.h
test/: CMakeLists.txt  arith_test.cpp  cpu_test.cpp  fixture.h  keyboard_test.cpp
wxwidgets/: .gitignore  CMakeLists.txt  WxCalcWindow.cpp  WxCalcWindow.hpp  application.cpp  main_window.cpp  main_window.h
